--- a/PersistenceCoreDataLab/Base.lproj/Main.storyboard
+++ b/PersistenceCoreDataLab/Base.lproj/Main.storyboard
@@ -1,24 +1,203 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="QPW-2U-d3k">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="Sq3-C5-KLU">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="0Rg-4G-Duq" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iaW-nB-PTD">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gfw-9f-FCD">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="gfw-9f-FCD" firstAttribute="trailing" secondItem="aSJ-ob-vSL" secondAttribute="trailing" id="S3h-kV-ZZb"/>
+                            <constraint firstItem="gfw-9f-FCD" firstAttribute="top" secondItem="aSJ-ob-vSL" secondAttribute="top" id="XHk-Bq-duQ"/>
+                            <constraint firstItem="gfw-9f-FCD" firstAttribute="leading" secondItem="aSJ-ob-vSL" secondAttribute="leading" id="duZ-rU-mjV"/>
+                            <constraint firstItem="gfw-9f-FCD" firstAttribute="bottom" secondItem="aSJ-ob-vSL" secondAttribute="bottom" id="vHf-Ap-x7A"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="aSJ-ob-vSL"/>
                     </view>
+                    <navigationItem key="navigationItem" id="OIF-AQ-nhu">
+                        <barButtonItem key="rightBarButtonItem" image="plus" catalog="system" id="tWi-Jt-NqO">
+                            <connections>
+                                <segue destination="USf-Gt-9ZL" kind="presentation" id="bs0-ye-w9y"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SPL-oH-HB2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="718.84057971014499" y="488.83928571428567"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="uXb-rQ-Gyp">
+            <objects>
+                <tableViewController id="USf-Gt-9ZL" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="Meg-ZM-O7Z">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <sections>
+                            <tableViewSection id="63O-2v-LtU">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="4KD-Rz-R1Z">
+                                        <rect key="frame" x="0.0" y="18" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4KD-Rz-R1Z" id="DjE-jw-WnS">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="awJ-SO-BKc">
+                                                    <rect key="frame" x="20" y="4" width="374" height="36"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="awJ-SO-BKc" firstAttribute="top" secondItem="DjE-jw-WnS" secondAttribute="top" constant="4" id="d52-t6-19B"/>
+                                                <constraint firstAttribute="trailing" secondItem="awJ-SO-BKc" secondAttribute="trailing" constant="20" id="jQu-4E-eXG"/>
+                                                <constraint firstItem="awJ-SO-BKc" firstAttribute="leading" secondItem="DjE-jw-WnS" secondAttribute="leading" constant="20" id="mhh-zh-3HD"/>
+                                                <constraint firstAttribute="bottom" secondItem="awJ-SO-BKc" secondAttribute="bottom" constant="4" id="pde-Vn-R3u"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="250" id="jJH-Yr-Lub">
+                                        <rect key="frame" x="0.0" y="61.5" width="414" height="250"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jJH-Yr-Lub" id="1Qk-4B-fGr">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zrn-j5-eIa">
+                                                    <rect key="frame" x="0.0" y="20" width="414" height="210"/>
+                                                </pickerView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="zrn-j5-eIa" firstAttribute="top" secondItem="1Qk-4B-fGr" secondAttribute="top" constant="20" id="14A-Xf-zNO"/>
+                                                <constraint firstItem="zrn-j5-eIa" firstAttribute="centerY" secondItem="1Qk-4B-fGr" secondAttribute="centerY" id="56v-UJ-0Pj"/>
+                                                <constraint firstItem="zrn-j5-eIa" firstAttribute="centerX" secondItem="1Qk-4B-fGr" secondAttribute="centerX" id="Yet-G5-3U3"/>
+                                                <constraint firstItem="zrn-j5-eIa" firstAttribute="leading" secondItem="1Qk-4B-fGr" secondAttribute="leading" id="vh2-5K-yLi"/>
+                                                <constraint firstAttribute="trailing" secondItem="zrn-j5-eIa" secondAttribute="trailing" id="xmV-xE-MDI"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="yao-hL-qMN">
+                                        <rect key="frame" x="0.0" y="311.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yao-hL-qMN" id="U6m-yz-sQS">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FCn-Xo-aLL">
+                                                    <rect key="frame" x="184" y="7" width="46" height="30"/>
+                                                    <state key="normal" title="Button"/>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="FCn-Xo-aLL" firstAttribute="centerY" secondItem="U6m-yz-sQS" secondAttribute="centerY" id="2sX-LB-6w4"/>
+                                                <constraint firstItem="FCn-Xo-aLL" firstAttribute="centerX" secondItem="U6m-yz-sQS" secondAttribute="centerX" id="W90-eg-7OM"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="USf-Gt-9ZL" id="7Rw-Ln-dot"/>
+                            <outlet property="delegate" destination="USf-Gt-9ZL" id="RoX-no-laa"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PT9-KG-GXX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="718.84057971014499" y="1189.9553571428571"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="1GX-el-VpV">
+            <objects>
+                <viewController id="OAJ-YW-Bws" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="I5l-4C-LR0">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="WJb-3W-ZyO"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="X5Q-QE-RZ6"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cgx-SI-SiI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="718.84057971014499" y="-161.38392857142856"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="7ev-0q-JMT">
+            <objects>
+                <tabBarController id="QPW-2U-d3k" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="01m-M0-FJl">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Nsz-Uf-5sp" kind="relationship" relationship="viewControllers" id="cw4-0v-mgD"/>
+                        <segue destination="p90-vz-Bao" kind="relationship" relationship="viewControllers" id="JdQ-ru-gjj"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sdU-LG-Ino" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1110" y="165"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="hcP-wk-Pmu">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Nsz-Uf-5sp" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item 1" id="7bl-y3-hfl"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xZd-5H-X8u">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="OAJ-YW-Bws" kind="relationship" relationship="rootViewController" id="JbI-Gh-AyZ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ctc-bg-P81" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-191.30434782608697" y="-161.38392857142856"/>
+        </scene>
+        <!--Item 2-->
+        <scene sceneID="NPc-yH-5bU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="p90-vz-Bao" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item 2" id="qWC-yZ-u02"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="aN3-3s-UYh">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="0Rg-4G-Duq" kind="relationship" relationship="rootViewController" id="wBZ-v2-p1w"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lNo-H3-ec9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-191.30434782608697" y="488.83928571428567"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="plus" catalog="system" width="64" height="56"/>
+    </resources>
 </document>
